tests/core/errors/test_errors_data/TARGETS.fixture
soft_error("starlark_raised_soft_error", "Will be reported")
